--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -16,22 +16,32 @@
    "metadata": {},
    "source": [
     "# Let Me Answer For You\n",
-    "> Deep Learning Dialog System for Quesiton and Answering"
+    "> Deep Learning Dialog System for Quesiton and Answering "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Install"
+    "## Install"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Pip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The system can be installed via the `pip` command:\n",
+    "```\n",
+    "pip install let_me_answer_for_you\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
