--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -16,7 +16,16 @@
    "metadata": {},
    "source": [
     "# Let Me Answer For You\n",
-    "> Deep Learning Dialog System for Quesiton and Answering "
+    "> A Simple and Powerful Deep Learning Dialog System for Quesiton and Answering \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img alt=\"Exporting from nbdev\" width=\"1000\" \n",
+    "     caption=\"The three Dialog Systems' methods\" \n",
+    "     src=\"images/let_me_answer_for_you.gif\" />"
    ]
   },
   {
@@ -41,6 +50,20 @@
     "```\n",
     "pip install let_me_answer_for_you\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Warning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the first demo release in is expect to change during the next week."
    ]
   },
   {
