--- a/nbs/02_dialog_system.ipynb
+++ b/nbs/02_dialog_system.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#hide\n",
     "%load_ext autoreload\n",
@@ -112,73 +103,13 @@
      "output_type": "stream",
      "text": [
       "/opt/conda/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/opt/conda/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:469: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
-      "  \"this warning.\", FutureWarning)\n"
+      "  FutureWarning)\n"
      ]
     }
    ],
    "source": [
-    "ds =  DialogSystem(download_models=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Introduce question:\n",
-      " What day is today?\n",
-      "Introduce the answer:\n",
-      " Today is the day!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/opt/conda/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:469: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
-      "  \"this warning.\", FutureWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "ds.new_q_a()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Introduce question:\n",
-      " What day is today?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "What day is today?:\n",
-      "\n",
-      "0: Today is the day!\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
+    "#hide\n",
+    "ds =  DialogSystem(download_models=False)\n",
     "ds.question_answer()"
    ]
   },
@@ -191,28 +122,8 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Give context a title:\n",
-      " IOT\n",
-      "Introduce the context:\n",
-      " Internet of Things. We can provide expert resources to connect your different devices and exchange data within those devices. Further make the data accessible via web tools. Connect with us for further information.   DevOps Our team can help you organization to implement best DevOps practices that can automate the processes between software development and various IT teams, in order that they can build, test, and release software faster and more reliably.\n"
-     ]
-    }
-   ],
-   "source": [
-    "ds.new_context()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
       "Introduce question:\n",
-      " What can Intekglobal do for me?\n"
+      " What you do at Intekglobal?\n"
      ]
     },
     {
@@ -221,17 +132,27 @@
      "text": [
       "\n",
       "\n",
-      "What can Intekglobal do for me?:\n",
+      "What you do at Intekglobal?:\n",
       "\n",
-      "0: This is the Intekglobal Dialog System\n",
-      "1: Connect with us for further information\n",
-      "2: help you organization to implement best DevOps practices\n",
+      "1: This is the Intekglobal Dialog System\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "ds.question_answer()\n"
+    "#hide\n",
+    "ds.new_q_a()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "from shutil import rmtree\n",
+    "rmtree('./data', ignore_errors=True)"
    ]
   },
   {
