--- a/nbs/02_dialog_system.ipynb
+++ b/nbs/02_dialog_system.ipynb
@@ -45,6 +45,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dialog System Class\n",
+    "> Class that implements the `question_response`, `new_question_answer` and `new_context` methods"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -52,6 +60,9 @@
    "source": [
     "#export\n",
     "class DialogSystem:\n",
+    "    ''' The DialogSystem class implements the main methods\n",
+    "    defined in settings module\n",
+    "    '''\n",
     "    def __init__(\n",
     "        self,\n",
     "        context_data_file=None,\n",
@@ -97,16 +108,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "from nbdev.showdoc import *\n",
+    "show_doc(DialogSystem)\n",
+    "show_doc(DialogSystem.question_answer)\n",
+    "show_doc(DialogSystem.new_q_a)\n",
+    "show_doc(DialogSystem.new_context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#hide\n",
     "ds =  DialogSystem(download_models=False)\n",
@@ -117,28 +132,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Introduce question:\n",
-      " What you do at Intekglobal?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "What you do at Intekglobal?:\n",
-      "\n",
-      "1: This is the Intekglobal Dialog System\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#hide\n",
     "ds.new_q_a()"
@@ -154,13 +148,6 @@
     "from shutil import rmtree\n",
     "rmtree('./data', ignore_errors=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
