changes settings name

--- a/nbs/01_settings.ipynb
+++ b/nbs/01_settings.ipynb
@@ -141,8 +141,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dialog System\n",
-    "> Question Answering Automated Dialog System"
+    "# Settings and Configuration\n",
+    "> Question Answering Automated Dialog System "
    ]
   },
   {
