creates chatbot module

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -23,9 +23,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Pip Install"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The system can be installed via the `pip` command:\n",
+    "```\n",
+    "pip install let_me_answer_for_you\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simple Usage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the package is installed you can download the file `chatbot.py` of the repo and run: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "python chatbot.py\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After finishing the installation process,  an interface like the following will appear:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img alt=\"Exporting from nbdev\" width=\"1000\" \n",
-    "     caption=\"The three Dialog Systems' methods\" \n",
-    "     src=\"images/let_me_answer_for_you.gif\" />"
+    "     caption=\"Example using Contexts\" \n",
+    "     src=\"images/spacex_chatbot_2.gif\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, there was already an answer to the question and a new context was also added. The function `chatbot.py` accepts the *context* and *faq* files as their flags. If no flags for the files are provided, the system reads them (if inexistent, makes them) from the *data* directory at same path-level of `chatbot.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Technology"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Chatbot is based on two types of question/answer models:  \n",
+    "\n",
+    "    - Context Question-Answering Machine Learning  \n",
+    "    - Knowledge Based Question and Answers \n",
+    "\n",
+    "This library is built on top of the [deeppavlov library](https://deeppavlov.ai/). It is strongly recommended to consult it for further details of the question/answer models here employed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Structure of the  Package"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `chatbot.py` module calls the `ChatBot` class in `let_me_answer_for_you.chatbot`. The `ChatBot` is the child of the `DialogSystem` class. This class lives in `let_me_answer_for_you.chatbot.dialog_system` and is composed of the  following three methods:  \n",
+    "    - `question_answering`  \n",
+    "    - `new_question_answering`  \n",
+    "    - `new_context`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first method retrieves a set of answers for a given question. The second method adds a new question-answer pair to the dataset and the third method adds a new context to the dataset. These are the methods that may be exported as the API calls."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Documentation "
    ]
   },
   {
@@ -43,35 +147,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "## Install"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Pip"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The system can be installed via the `pip` command:\n",
-    "```\n",
-    "pip install let_me_answer_for_you\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Initialize the Dialog System "
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
