separates the dialog_system methods from the chatbot logic

--- a/nbs/02_dialog_system.ipynb
+++ b/nbs/02_dialog_system.ipynb
@@ -27,8 +27,8 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "from let_me_answer_for_you.settings import *\n",
-    "from deeppavlov import train_model\n",
+    "from let_me_answer_for_you import settings\n",
+    "import deeppavlov\n",
     "import logging\n",
     "from unittest.mock import patch\n",
     "from collections import defaultdict\n",
@@ -44,15 +44,14 @@
     "\n",
     "logging.debug(\" Debug Log Active\")\n",
     "logging.info(\"Hello! Welcome to our automated dialog system!\")\n",
-    "logging.warning(' Warning Log Active')\n",
-    "#logging.error(' Error Log Active ')"
+    "logging.warning(' Warning Log Active')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dialog System Class\n",
+    "# Dialog System \n",
     "> Class that implements the `question_response`, `new_question_answer` and `new_context` methods"
    ]
   },
@@ -65,7 +64,7 @@
     "#export\n",
     "class DialogSystem:\n",
     "    ''' The DialogSystem class implements the main methods\n",
-    "    defined in settings module. \\n\n",
+    "    defined in the settings module. \\n\n",
     "    INPUT: \\n\n",
     "    - context_data_file: csv file of contexts (default: None)\\n\n",
     "    - faq_data_file: csv file of FAQs (default: None)\\n\n",
@@ -74,9 +73,9 @@
     "    \n",
     "    If the context or the faq files are not provided, a *data* directory with the missing files,\n",
     "    will be created (in the same path where the module is running). \\n\n",
-    "    When an instance is created, the 'run_shell_installs()' and 'load_and_prepare_data()' routines are called,\n",
-    "    also the *data* and *qa_models* attributes are created, they store the information of the dataframes\n",
-    "    and of the models, respectively.\n",
+    "    When an instance is created, the 'run_shell_installs', 'load_and_prepare_data'\n",
+    "    and 'load_qa_models' of the settings module  are called. Also the *data* and *qa_models* \n",
+    "    attributes are created, they store the dataframes and models information, respectively.\\n\n",
     "    '''\n",
     "    def __init__(\n",
     "        self,\n",
@@ -85,17 +84,16 @@
     "        configs_faq=None,\n",
     "        download_models=True\n",
     "    ):\n",
-    "        ''' The init of the class  '''\n",
-    "        run_shell_installs()\n",
+    "        settings.run_shell_installs()\n",
     "        self.data = {'context': defaultdict(str), 'faq': defaultdict(str)}\n",
     "        self.download = download_models\n",
-    "        load_and_prepare_data(\n",
+    "        settings.load_and_prepare_data(\n",
     "            context_data_file=context_data_file,\n",
     "            faq_data_file=faq_data_file,\n",
     "            configs_faq=configs_faq,\n",
     "            data=self.data\n",
     "        )\n",
-    "        self.qa_models = load_qa_models(\n",
+    "        self.qa_models = settings.load_qa_models(\n",
     "            config_tfidf=self.data['faq']['config'], download=self.download\n",
     "        )\n",
     "\n",
@@ -104,16 +102,21 @@
     "        INPUT: \\n\n",
     "        - *question* parameter \\n\n",
     "        The method creates the following attributes:\\n\n",
-    "        - 'self.question' -> the question parameter \\n\n",
-    "        - 'self.response' -> a list of possible responses \\n\n",
-    "        - 'self.formatted_responses' -> string of the question-answer pair\n",
+    "        - 'self.question' -> the input parameter \\n\n",
+    "        - 'self.responses' -> a dict of possible responses \\n\n",
+    "        - 'self.formatted_responses' -> a formatted string of the possible responses\n",
+    "        \n",
+    "        This method calls the functions `settings.get_response` and `settings.format_responses`\n",
     "        '''\n",
-    "        self.question = question\n",
-    "        self.responses, self.formatted_responses = get_responses(\n",
+    "\n",
+    "        self.question, self.responses = settings.get_responses(\n",
     "            self.data['context']['df'],\n",
     "            question,\n",
     "            self.qa_models,\n",
     "            nb_squad_results=1\n",
+    "        )\n",
+    "        self.flatten_responses, self.formatted_responses = settings.format_responses(\n",
+    "            self.responses\n",
     "        )\n",
     "\n",
     "    def new_question_answer(self, question, answer):\n",
@@ -122,13 +125,16 @@
     "        - question\\n\n",
     "        - answer\\n        \n",
     "        \n",
-    "        The new question-answer pair is stored in the csv in the path *self.data['faq']['path']*\n",
+    "        The new question-answer pair is stored in the path *self.data['faq']['path']*\n",
+    "        and the models in *qa_models['faq']* get re-trained by calling the function\n",
+    "        `deeppavlaov.train_model` \n",
+    "        \n",
     "        '''\n",
     "        _faq = self.data['faq']\n",
     "        new_faq = pd.DataFrame({'Question': [question], 'Answer': [answer]})\n",
     "        _faq['df'] = _faq['df'].append(new_faq)\n",
     "        _faq['df'].to_csv(_faq['path'], index=False)\n",
-    "        self.qa_models['faq']['tfidf'] = train_model(\n",
+    "        self.qa_models['faq']['tfidf'] = deeppavlov.train_model(\n",
     "            _faq['config'], download=False\n",
     "        )\n",
     "        self.question, self.answer = question, answer\n",
@@ -140,7 +146,7 @@
     "        - topic (The title of the context)\n",
     "        - context\n",
     "        \n",
-    "        The new context is stored in the csv in the path *self.data['context']['path']*\n",
+    "        The new context is stored in the path *self.data['context']['path']*\n",
     "        '''\n",
     "        _ctx = self.data['context']\n",
     "        new_context = pd.DataFrame({'topic': [topic], 'context': [context]})\n",
@@ -163,7 +169,7 @@
        "> <code>DialogSystem</code>(**`context_data_file`**=*`None`*, **`faq_data_file`**=*`None`*, **`configs_faq`**=*`None`*, **`download_models`**=*`True`*)\n",
        "\n",
        "The DialogSystem class implements the main methods\n",
-       "defined in settings module. \n",
+       "defined in the settings module. \n",
        "\n",
        "INPUT: \n",
        "\n",
@@ -179,9 +185,9 @@
        "If the context or the faq files are not provided, a *data* directory with the missing files,\n",
        "will be created (in the same path where the module is running). \n",
        "\n",
-       "When an instance is created, the 'run_shell_installs()' and 'load_and_prepare_data()' routines are called,\n",
-       "also the *data* and *qa_models* attributes are created, they store the information of the dataframes\n",
-       "and of the models, respectively."
+       "When an instance is created, the 'run_shell_installs', 'load_and_prepare_data'\n",
+       "and 'load_qa_models' of the settings module  are called. Also the *data* and *qa_models* \n",
+       "attributes are created, they store the dataframes and models information, respectively."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -193,23 +199,18 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"DialogSystem.question_answer\" class=\"doc_header\"><code>DialogSystem.question_answer</code><a href=\"__main__.py#L38\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"DialogSystem.new_context\" class=\"doc_header\"><code>DialogSystem.new_context</code><a href=\"__main__.py#L80\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>DialogSystem.question_answer</code>(**`question`**)\n",
+       "> <code>DialogSystem.new_context</code>(**`topic`**, **`context`**)\n",
        "\n",
-       "Gets answers to a question. \n",
+       "Adds a new context. \n",
        "\n",
-       "INPUT: \n",
+       "INPUT:\n",
        "\n",
-       "- *question* parameter \n",
+       "- topic (The title of the context)\n",
+       "- context\n",
        "\n",
-       "The method creates the following attributes:\n",
-       "\n",
-       "- 'self.question' -> the question parameter \n",
-       "\n",
-       "- 'self.response' -> a list of possible responses \n",
-       "\n",
-       "- 'self.formatted_responses' -> string of the question-answer pair"
+       "The new context is stored in the path *self.data['context']['path']*"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -221,7 +222,7 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"DialogSystem.new_question_answer\" class=\"doc_header\"><code>DialogSystem.new_question_answer</code><a href=\"__main__.py#L55\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"DialogSystem.new_question_answer\" class=\"doc_header\"><code>DialogSystem.new_question_answer</code><a href=\"__main__.py#L59\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>DialogSystem.new_question_answer</code>(**`question`**, **`answer`**)\n",
        "\n",
@@ -234,7 +235,9 @@
        "- answer\n",
        "\n",
        "\n",
-       "The new question-answer pair is stored in the csv in the path *self.data['faq']['path']*"
+       "The new question-answer pair is stored in the path *self.data['faq']['path']*\n",
+       "and the models in *qa_models['faq']* get re-trained by calling the function\n",
+       "`deeppavlaov.train_model` "
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -246,18 +249,25 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"DialogSystem.new_context\" class=\"doc_header\"><code>DialogSystem.new_context</code><a href=\"__main__.py#L73\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"DialogSystem.question_answer\" class=\"doc_header\"><code>DialogSystem.question_answer</code><a href=\"__main__.py#L37\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>DialogSystem.new_context</code>(**`topic`**, **`context`**)\n",
+       "> <code>DialogSystem.question_answer</code>(**`question`**)\n",
        "\n",
-       "Adds a new context. \n",
+       "Gets answers to a question. \n",
        "\n",
-       "INPUT:\n",
+       "INPUT: \n",
        "\n",
-       "- topic (The title of the context)\n",
-       "- context\n",
+       "- *question* parameter \n",
        "\n",
-       "The new context is stored in the csv in the path *self.data['context']['path']*"
+       "The method creates the following attributes:\n",
+       "\n",
+       "- 'self.question' -> the input parameter \n",
+       "\n",
+       "- 'self.responses' -> a dict of possible responses \n",
+       "\n",
+       "- 'self.formatted_responses' -> a formatted string of the possible responses\n",
+       "\n",
+       "This method calls the functions `settings.get_response` and `settings.format_responses`"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -269,17 +279,18 @@
    ],
    "source": [
     "from nbdev.showdoc import *\n",
+    "\n",
+    "method_list_f = lambda Foo: [func for func in dir(Foo) if callable(getattr(Foo, func)) and not func.startswith(\"__\")]\n",
     "show_doc(DialogSystem)\n",
-    "show_doc(DialogSystem.question_answer)\n",
-    "show_doc(DialogSystem.new_question_answer)\n",
-    "show_doc(DialogSystem.new_context)"
+    "for method in method_list_f(DialogSystem):\n",
+    "    show_doc( getattr(DialogSystem, method))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test Examples "
+    "### Test Example"
    ]
   },
   {
@@ -302,40 +313,7 @@
       "[nltk_data]     /home/jovyan/nltk_data...\n",
       "[nltk_data]   Package nonbreaking_prefixes is already up-to-date!\n",
       "/opt/conda/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "ds = DialogSystem(\n",
-    "    faq_data_file='./faq_example.csv',\n",
-    "    context_data_file='./context_example.csv',\n",
-    "    download_models=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds.question_answer(question = 'What is Intekglobal?')\n",
-    "\n",
-    "assert ds.question == 'What is Intekglobal?'\n",
-    "assert ds.responses == ['This is the Intekglobal Dialog System']\n",
-    "assert ds.formatted_responses == 'What is Intekglobal?:\\n\\n1: This is the Intekglobal Dialog System\\n'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  FutureWarning)\n",
       "/opt/conda/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
       "  FutureWarning)\n",
       "/opt/conda/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:469: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
@@ -344,10 +322,51 @@
     }
    ],
    "source": [
-    "ds.new_question_answer(question='What day is today?', answer='Today is the day!')\n",
-    "ds.question_answer(question='What day is today?')\n",
+    "#test\n",
+    "import tempfile\n",
+    "from os import path\n",
+    "with tempfile.TemporaryDirectory() as tmpdirname:\n",
     "\n",
-    "assert ds.formatted_responses == 'What day is today?:\\n\\n1: Today is the day!\\n'"
+    "    ds = DialogSystem(\n",
+    "        faq_data_file=path.join(tmpdirname, 'faq_example.csv'),\n",
+    "        context_data_file=path.join(tmpdirname, 'context_example.csv'),\n",
+    "        download_models=False\n",
+    "    )\n",
+    "\n",
+    "    ds.question_answer(question='What is Intekglobal?')\n",
+    "\n",
+    "    assert ds.question == 'What is Intekglobal?'\n",
+    "    assert isinstance(ds.responses['squad'], dict)\n",
+    "    assert isinstance(ds.responses['faq'], dict)\n",
+    "    \n",
+    "    \n",
+    "    logging.info(f'{ds.question} \\n\\n {ds.formatted_responses}')\n",
+    "\n",
+    "    assert 'This should not be in the current set of responses' not in  ds.formatted_responses \n",
+    "    \n",
+    "    logging.info(f' dict of responses: {ds.responses}')\n",
+    "    logging.info(f'{ds.question} \\n\\n {ds.formatted_responses}')\n",
+    "\n",
+    "    ds.new_question_answer(\n",
+    "        question='What day is today?', answer='Today is the day!'\n",
+    "    )\n",
+    "    ds.question_answer(question='What day is today?')\n",
+    "\n",
+    "    assert 'Today is the day!' in ds.formatted_responses\n",
+    "\n",
+    "    context = '''Space Exploration Technologies Corp., trading as SpaceX,\n",
+    "    is an American aerospace manufacturer and space transportation services company headquartered\n",
+    "    in Hawthorne, California. It was founded in 2002 by Elon Musk with the goal of reducing \n",
+    "    space transportation costs to enable the colonization of Mars. SpaceX has developed several launch \n",
+    "    vehicles,the Starlink satellite constellation, and the Dragon spacecraft.\n",
+    "    '''\n",
+    "\n",
+    "    ds.new_context(topic='SpaceX', context=context)\n",
+    "    ds.question_answer(question='What are SpaceX initials stand for?')\n",
+    "\n",
+    "    logging.info(f'{ds.question} \\n\\n {ds.formatted_responses}')\n",
+    "\n",
+    "    assert 'Space Exploration Technologies Corp.' in ds.formatted_responses"
    ]
   },
   {
@@ -356,33 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context = '''Space Exploration Technologies Corp., trading as SpaceX,\n",
-    "is an American aerospace manufacturer and space transportation services company headquartered\n",
-    "in Hawthorne, California. It was founded in 2002 by Elon Musk with the goal of reducing \n",
-    "space transportation costs to enable the colonization of Mars. SpaceX has developed several launch \n",
-    "vehicles,the Starlink satellite constellation, and the Dragon spacecraft.\n",
-    "'''\n",
-    "ds.new_context(topic='SpaceX', context=context)\n",
-    "ds.question_answer(question='What are SpaceX initials stand for?')\n",
-    "\n",
-    "assert ds.responses == [\n",
-    "    'Space Exploration Technologies Corp.',\n",
-    "    'Space Exploration Technologies Corp.', 'Today is the day!'\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#hide\n",
-    "from shutil import rmtree\n",
-    "from os import remove\n",
-    "remove('./faq_example.csv')\n",
-    "remove('./context_example.csv')\n",
-    "rmtree('./data', ignore_errors=True)"
+    "#hide"
    ]
   }
  ],
