--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -23,6 +23,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A chatbot and API that can answer specific and complex questions. Built on top of the  [deeppavlov library](https://deeppavlov.ai/) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pip Install"
    ]
   },
@@ -30,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The system can be installed via the `pip` command:\n",
+    "The library can be found on **PyPI** so you can just run:\n",
     "```\n",
     "pip install let_me_answer_for_you\n",
     "```"
@@ -63,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After finishing the installation process,  an interface like the following will appear:"
+    "After the installation process is finished,  the following interface appears:"
    ]
   },
   {
@@ -86,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Technology"
+    "## Technologies"
    ]
   },
   {
@@ -95,10 +102,11 @@
    "source": [
     "The Chatbot is based on two types of question/answer models:  \n",
     "\n",
-    "    - Context Question-Answering Machine Learning  \n",
-    "    - Knowledge Based Question and Answers \n",
+    "  1.   [Question Answering Model for SQuAD dataset](http://docs.deeppavlov.ai/en/master/features/models/squad.html)  \n",
+    "  2.   [Knowledge Base Question Answering](http://docs.deeppavlov.ai/en/master/features/models/kbqa.html)\n",
     "\n",
-    "This library is built on top of the [deeppavlov library](https://deeppavlov.ai/). It is strongly recommended to consult it for further details of the question/answer models here employed."
+    "The first type of models can answer several questions from the same context, while the second type is very useful for specific and complex questions.\n",
+    "It is strongly recommended to consult the [deeppavlov library](https://deeppavlov.ai/)  for further details of the available models for dialog systems."
    ]
   },
   {
@@ -112,17 +120,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `chatbot.py` module calls the `ChatBot` class in `let_me_answer_for_you.chatbot`. The `ChatBot` is the child of the `DialogSystem` class. This class lives in `let_me_answer_for_you.chatbot.dialog_system` and is composed of the  following three methods:  \n",
-    "    - `question_answering`  \n",
-    "    - `new_question_answering`  \n",
-    "    - `new_context`"
+    "The `chatbot.py` module calls the `ChatBot` class in `let_me_answer_for_you.chatbot`. The `ChatBot` is the child of the `DialogSystem` class. This class lives in `let_me_answer_for_you.chatbot.dialog_system` and is composed of the  three main methods of the library:  \n",
+    "\n",
+    "  1. [question_answering](/let_me_answer_for_you/dialog_system#DialogSystem.question_answer)\n",
+    "  2. [new_question_answer](/let_me_answer_for_you/dialog_system#DialogSystem.new_question_answer)\n",
+    "  3. [new_context](/let_me_answer_for_you/dialog_system#DialogSystem.new_context)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first method retrieves a set of answers for a given question. The second method adds a new question-answer pair to the dataset and the third method adds a new context to the dataset. These are the methods that may be exported as the API calls."
+    "The first method retrieves a set of answers for a given question. The second method adds a new question-answer pair to the dataset and the third method adds a new context to the dataset. _These are the methods that may be exported as the API calls._"
    ]
   },
   {
